# slipstream

./: CMakeLists.txt  README.md  pyproject.toml  vcpkg.json
.github/workflows/: ci.yml
core/include/: memory.hpp  state.hpp  step.hpp
core/src/: memory.cpp  state.cpp  step.cpp
core/src/k_cpu/: advection.cpp  advection.hpp  advection_3d.cpp  advection_3d.hpp  buoyancy.cpp  buoyancy.hpp  buoyancy_3d.cpp  buoyancy_3d.hpp  cooling.cpp  cooling_3d.cpp  cooling_3d.hpp  injection.cpp  injection_3d.cpp  injection_3d.hpp  projection.cpp  projection.hpp  projection_3d.cpp  projection_3d.hpp
core/src/k_cuda/: advection.cu  advection.hpp  advection_3d.cu  advection_3d.hpp  buoyancy.cu  buoyancy.hpp  buoyancy_3d.cu  buoyancy_3d.hpp  cooling.cu  cooling.hpp  cooling_3d.cu  cooling_3d.hpp  injection_3d.cu  injection_3d.hpp  projection.cu  projection.hpp  projection_3d.cu  projection_3d.hpp
designs/: test_structure.md
examples/: cavity.py  smoke_plume.py
examples/python/: cavity.py
lib/include/: arena.hpp  grid.hpp  solver.hpp  state.hpp
lib/include/cpu/: step.hpp
lib/include/gpu/: step.hpp
lib/src/: arena.cpp  memory.cpp  solver.cpp  state.cpp  step.cpp
lib/src/core/: grid.cpp
lib/src/cpu/: advect.cpp  advect.hpp  buoyancy.cpp  buoyancy.hpp  compute_advection.cpp  compute_advection.hpp  compute_buoyancy.cpp  compute_buoyancy.hpp  compute_cooling.cpp  compute_cooling.hpp  compute_injection.cpp  compute_injection.hpp  compute_projection.cpp  compute_projection.hpp  cooling.cpp  cooling.hpp  inject.cpp  inject.hpp  memory.cpp  project.cpp  project.hpp  step.cpp  step.hpp
lib/src/gpu/: advect.cu  advect.hpp  buoyancy.cu  buoyancy.hpp  compute_advection.cu  compute_advection.hpp  compute_buoyancy.cu  compute_buoyancy.hpp  compute_cooling.cu  compute_cooling.hpp  compute_injection.cu  compute_injection.hpp  compute_projection.cu  compute_projection.hpp  cooling.cu  cooling.hpp  inject.cu  inject.hpp  memory.cpp  memory.cu  memory.hpp  project.cu  project.hpp  step.cu  step.hpp  transfer.cpp  transfer.cu  transfer.hpp
lib/src/k_cpu/: cooling.hpp  injection.hpp  projection.cpp
lib/src/k_cuda/: advection.hpp  injection.cu  injection.hpp  projection.cu  projection.hpp
python/: slipstream_py.cpp
python/slipstream/: __init__.py
tests/cpp/: test_advection.cpp  test_buoyancy.cpp  test_conservation.cpp  test_convergence.cpp  test_divergence.cpp  test_gpu_parity.cu  test_ppm.cpp
tests/cpp/3d_parity/: test_allocate_3d.cpp  test_inj_cool_3d_parity.cpp  test_projection_3d_parity.cpp  test_scalar_advection_3d_parity.cpp  test_step_3d_parity.cpp  test_velocity_advection_3d_parity.cpp
tests/cpp/cuda_parity/: test_cuda_parity.cu  test_cuda_parity_3d.cu  test_gpu_parity.cu
tests/cpp/physics/: test_incompressibility.cpp  test_incompressibility_3d.cpp  test_plume_behavior.cpp  test_scalar_transport.cpp
tests/python/: test_api.py
tools/: cli.cpp  dump_frames.cpp  ppm.hpp  vdb.cpp  vdb.hpp
