[build-system]
requires      = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name             = "slipstream"
version          = "0.1.0"
requires-python  = ">= 3.11"
dependencies     = ["numpy"]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages   = ["python/slipstream"]

[tool.scikit-build.cmake.define]
SLIPSTREAM_BUILD_PYTHON = "ON"
